@@ -1,3 +1,11 @@
+2007-12-23  Guido Diepen  <guido@jcwodan.nl>
+
+	* added RAPI2 implementation of CeGetDiskFreeSpaceEx()
+	  rapi call.
+	* Some minor fixes in types (also were fixed in libsynce)
+	* Updated README in rapi2 to show which methods are 
+	  implemented and which not.
+	
 2007-12-18  Guido Diepen  <guido@jcwodan.nl>
 
 	* added python binding for CeGetSystemPowerStatus
